A mess but now works with Java 21. Added Polaris dependency.